k8s/poi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripsinsights-poi
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: tripsinsights-poi
